# mitoric

./: .editorconfig  .gitignore  AGENTS.md  LICENSE  Makefile  README.md  README_JP.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/actions/setup-this-repository/: action.yml
.github/workflows/: ci.yml  publish-pypi.yml  publish-testpypi.yml  pypi-smoke.yml
docs/: python_coding_rule.md
examples/output/: compare_report.html  single_report.html
src/mitoric/: __init__.py
src/mitoric/api/: __init__.py  pipeline.py  report.py
src/mitoric/models/: __init__.py  aggregation.py  base.py  report.py
src/mitoric/profiling/: associations.py  columns.py  dataset.py
src/mitoric/profiling/compare/: __init__.py  histograms.py
src/mitoric/profiling/histograms/: __init__.py  builder.py  config.py
src/mitoric/profiling/profiles/: __init__.py  categorical.py  datetime.py  list_profile.py  numeric.py  text.py
src/mitoric/profiling/utils/: __init__.py  constants.py  sampling.py  type_utils.py
src/mitoric/render/: __init__.py  formatters.py  template.py
src/mitoric/reporting/: __init__.py  builder.py  payload_schema.py
src/mitoric/templates/: report.html
src/mitoric/templates/layout/: base.html
tests/: conftest.py
tests/e2e/: example_reports.py  test_example_outputs.py
tests/integration/report/: test_bins_switch.py  test_compare_report.py  test_report_output_file.py  test_single_report.py
tests/unit/api/: test_report_interactions.py  test_report_pipeline.py  test_report_validation.py
tests/unit/examples/: test_example_enrichment.py
tests/unit/profiling/: test_associations.py  test_associations_edges.py  test_columns.py  test_columns_edges.py  test_comparison_summary.py  test_dataset_summary.py
tests/unit/render/: test_formatters.py
tests/unit/reporting/: test_payload_schema.py  test_report_builder.py
(+16 files in other folders)
